# workerd-manager

./: .gitignore  Cargo.toml  LICENSE
.devcontainer/: devcontainer.json  docker-compose.yml
crates/api/: Cargo.toml
crates/api/src/: auth.rs  config.rs  errors.rs  lib.rs  main.rs  users.rs  workerd.rs  workers.rs
crates/entity/: Cargo.toml
crates/entity/src/: lib.rs  prelude.rs  sea_orm_active_enums.rs  user.rs  worker.rs
crates/migration/src/: lib.rs  m20240814_000001_create_table.rs
crates/service/: Cargo.toml
crates/service/src/: lib.rs  mutation.rs  query.rs
crates/service/src/users/: mutation.rs  query.rs
crates/service/src/workers/: mutation.rs  query.rs
